parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    STR
    TRUE
    FALSE
    MEDIA
    MEDIANA
    MODA
    VARIANZA
    STDEV
    PLOTXY

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR
Rule 2     neuraltablefunctions -> ID
Rule 3     varsgl -> VARS vars
Rule 4     varsgl -> empty
Rule 5     vars -> typing COLON neuralinsertvar varsarr varsmul vars
Rule 6     vars -> empty
Rule 7     neuralinsertvar -> ID
Rule 8     varsarr -> LEFTSQR CTEINT RIGHTSQR
Rule 9     varsarr -> empty
Rule 10    varsmul -> COMMA neuralinsertvar varsarr varsmul
Rule 11    varsmul -> SEMICOLON
Rule 12    modules -> FUNCTION functype neuralinsertfuncname funcparam
Rule 13    modules -> empty
Rule 14    neuralinsertfuncname -> ID
Rule 15    functype -> VOID
Rule 16    functype -> typing
Rule 17    funcparam -> LEFTPAR parameters RIGHTPAR SEMICOLON varsgl LEFTBR statutes RIGHTBR neuralendfuncs modules
Rule 18    neuralendfuncs -> <empty>
Rule 19    typing -> INT
Rule 20    typing -> FLOAT
Rule 21    typing -> CHAR
Rule 22    parameters -> typing COLON ID idarray mulparams
Rule 23    parameters -> empty
Rule 24    mulparams -> COMMA parameters
Rule 25    mulparams -> empty
Rule 26    statutes -> assign statutesaux
Rule 27    statutes -> reading statutesaux
Rule 28    statutes -> writing statutesaux
Rule 29    statutes -> returning statutesaux
Rule 30    statutes -> ifing statutesaux
Rule 31    statutes -> whiling statutesaux
Rule 32    statutes -> foring statutesaux
Rule 33    statutes -> exp statutesaux
Rule 34    statutes -> specialfunc statutesaux
Rule 35    statutesaux -> statutes
Rule 36    statutesaux -> empty
Rule 37    specialfunc -> empty
Rule 38    assign -> ID idarray EQUAL exp SEMICOLON
Rule 39    writing -> WRITE LEFTPAR auxwrite mulwrite RIGHTPAR SEMICOLON
Rule 40    auxwrite -> writetyping
Rule 41    auxwrite -> exp
Rule 42    writetyping -> STRING
Rule 43    writetyping -> CTECHAR
Rule 44    mulwrite -> COMMA auxwrite mulwrite
Rule 45    mulwrite -> empty
Rule 46    reading -> READ LEFTPAR ID idarray mulread RIGHTPAR SEMICOLON
Rule 47    mulread -> COMMA ID idarray mulread
Rule 48    mulread -> empty
Rule 49    returning -> RETURN LEFTPAR exp RIGHTPAR SEMICOLON
Rule 50    ifing -> IF LEFTPAR exp RIGHTPAR THEN LEFTBR statutes RIGHTBR elsing
Rule 51    elsing -> ELSE LEFTBR statutes RIGHTBR
Rule 52    elsing -> empty
Rule 53    whiling -> WHILE LEFTPAR exp RIGHTPAR DO LEFTBR statutes RIGHTBR
Rule 54    foring -> FOR ID idarray EQUAL exp TO exp DO LEFTBR statutes RIGHTBR
Rule 55    idarray -> LEFTSQR exp RIGHTSQR
Rule 56    idarray -> empty
Rule 57    exp -> andexp exp1
Rule 58    exp1 -> OR exp
Rule 59    exp1 -> empty
Rule 60    andexp -> boolexp andexp1
Rule 61    andexp1 -> neuraland andexp
Rule 62    andexp1 -> empty
Rule 63    neuraland -> AND
Rule 64    boolexp -> arithexp boolexp1
Rule 65    boolexp1 -> GREATER arithexp
Rule 66    boolexp1 -> GREATERAND arithexp
Rule 67    boolexp1 -> LESSER arithexp
Rule 68    boolexp1 -> LESSERAND arithexp
Rule 69    boolexp1 -> SAME arithexp
Rule 70    boolexp1 -> NOTSAME arithexp
Rule 71    boolexp1 -> NOT arithexp
Rule 72    boolexp1 -> empty
Rule 73    arithexp -> geoexp arithexp1
Rule 74    arithexp1 -> PLUS arithexp
Rule 75    arithexp1 -> REST arithexp
Rule 76    arithexp1 -> empty
Rule 77    geoexp -> finexp geoexp1
Rule 78    geoexp1 -> TIMES geoexp
Rule 79    geoexp1 -> DIVIDE geoexp
Rule 80    geoexp1 -> empty
Rule 81    finexp -> LEFTPAR exp RIGHTPAR
Rule 82    finexp -> cteexp
Rule 83    cteexp -> CTEINT
Rule 84    cteexp -> CTEFLOAT
Rule 85    cteexp -> CTECHAR
Rule 86    cteexp -> ID paramsexp
Rule 87    paramsexp -> LEFTPAR paramsexp2 RIGHTPAR
Rule 88    paramsexp -> idarray
Rule 89    paramsexp2 -> exp auxparamsexp2
Rule 90    paramsexp2 -> empty
Rule 91    auxparamsexp2 -> COMMA exp auxparamsexp2
Rule 92    auxparamsexp2 -> empty
Rule 93    empty -> <empty>
Rule 94    debug -> empty

Terminals, with rules where they appear

AND                  : 63
CHAR                 : 21
COLON                : 5 22
COMMA                : 10 24 44 47 91
CTECHAR              : 43 85
CTEFLOAT             : 84
CTEINT               : 8 83
DIVIDE               : 79
DO                   : 53 54
ELSE                 : 51
EQUAL                : 38 54
FALSE                : 
FLOAT                : 20
FOR                  : 54
FUNCTION             : 12
GREATER              : 65
GREATERAND           : 66
ID                   : 2 7 14 22 38 46 47 54 86
IF                   : 50
INT                  : 19
LEFTBR               : 1 17 50 51 53 54
LEFTPAR              : 1 17 39 46 49 50 53 81 87
LEFTSQR              : 8 55
LESSER               : 67
LESSERAND            : 68
MAIN                 : 1
MEDIA                : 
MEDIANA              : 
MODA                 : 
NOT                  : 71
NOTSAME              : 70
OR                   : 58
PLOTXY               : 
PLUS                 : 74
PROGRAM              : 1
READ                 : 46
REST                 : 75
RETURN               : 49
RIGHTBR              : 1 17 50 51 53 54
RIGHTPAR             : 1 17 39 46 49 50 53 81 87
RIGHTSQR             : 8 55
SAME                 : 69
SEMICOLON            : 1 11 17 38 39 46 49
STDEV                : 
STR                  : 
STRING               : 42
THEN                 : 50
TIMES                : 78
TO                   : 54
TRUE                 : 
VARIANZA             : 
VARS                 : 3
VOID                 : 15
WHILE                : 53
WRITE                : 39
error                : 

Nonterminals, with rules where they appear

andexp               : 57 61
andexp1              : 60
arithexp             : 64 65 66 67 68 69 70 71 74 75
arithexp1            : 73
assign               : 26
auxparamsexp2        : 89 91
auxwrite             : 39 44
boolexp              : 60
boolexp1             : 64
cteexp               : 82
debug                : 
elsing               : 50
empty                : 4 6 9 13 23 25 36 37 45 48 52 56 59 62 72 76 80 90 92 94
exp                  : 33 38 41 49 50 53 54 54 55 58 81 89 91
exp1                 : 57
finexp               : 77
foring               : 32
funcparam            : 12
functype             : 12
geoexp               : 73 78 79
geoexp1              : 77
idarray              : 22 38 46 47 54 88
ifing                : 30
modules              : 1 17
mulparams            : 22
mulread              : 46 47
mulwrite             : 39 44
neuraland            : 61
neuralendfuncs       : 17
neuralinsertfuncname : 12
neuralinsertvar      : 5 10
neuraltablefunctions : 1
parameters           : 17 24
paramsexp            : 86
paramsexp2           : 87
program              : 0
reading              : 27
returning            : 29
specialfunc          : 34
statutes             : 1 17 35 50 51 53 54
statutesaux          : 26 27 28 29 30 31 32 33 34
typing               : 5 16 22
vars                 : 3 5
varsarr              : 5 10
varsgl               : 1 17
varsmul              : 5 10
whiling              : 31
writetyping          : 40
writing              : 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR
    (2) neuraltablefunctions -> . ID

    ID              shift and go to state 4

    neuraltablefunctions           shift and go to state 3

state 3

    (1) program -> PROGRAM neuraltablefunctions . SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR

    SEMICOLON       shift and go to state 5


state 4

    (2) neuraltablefunctions -> ID .

    SEMICOLON       reduce using rule 2 (neuraltablefunctions -> ID .)


state 5

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON . varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR
    (3) varsgl -> . VARS vars
    (4) varsgl -> . empty
    (93) empty -> .

    VARS            shift and go to state 7
    FUNCTION        reduce using rule 93 (empty -> .)
    MAIN            reduce using rule 93 (empty -> .)

    varsgl                         shift and go to state 6
    empty                          shift and go to state 8

state 6

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl . modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR
    (12) modules -> . FUNCTION functype neuralinsertfuncname funcparam
    (13) modules -> . empty
    (93) empty -> .

    FUNCTION        shift and go to state 10
    MAIN            reduce using rule 93 (empty -> .)

    modules                        shift and go to state 9
    empty                          shift and go to state 11

state 7

    (3) varsgl -> VARS . vars
    (5) vars -> . typing COLON neuralinsertvar varsarr varsmul vars
    (6) vars -> . empty
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR
    (93) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 93 (empty -> .)
    MAIN            reduce using rule 93 (empty -> .)
    LEFTBR          reduce using rule 93 (empty -> .)

    vars                           shift and go to state 12
    typing                         shift and go to state 13
    empty                          shift and go to state 14

state 8

    (4) varsgl -> empty .

    FUNCTION        reduce using rule 4 (varsgl -> empty .)
    MAIN            reduce using rule 4 (varsgl -> empty .)
    LEFTBR          reduce using rule 4 (varsgl -> empty .)


state 9

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules . MAIN LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR

    MAIN            shift and go to state 18


state 10

    (12) modules -> FUNCTION . functype neuralinsertfuncname funcparam
    (15) functype -> . VOID
    (16) functype -> . typing
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR

    VOID            shift and go to state 20
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    functype                       shift and go to state 19
    typing                         shift and go to state 21

state 11

    (13) modules -> empty .

    MAIN            reduce using rule 13 (modules -> empty .)


state 12

    (3) varsgl -> VARS vars .

    FUNCTION        reduce using rule 3 (varsgl -> VARS vars .)
    MAIN            reduce using rule 3 (varsgl -> VARS vars .)
    LEFTBR          reduce using rule 3 (varsgl -> VARS vars .)


state 13

    (5) vars -> typing . COLON neuralinsertvar varsarr varsmul vars

    COLON           shift and go to state 22


state 14

    (6) vars -> empty .

    FUNCTION        reduce using rule 6 (vars -> empty .)
    MAIN            reduce using rule 6 (vars -> empty .)
    LEFTBR          reduce using rule 6 (vars -> empty .)


state 15

    (19) typing -> INT .

    COLON           reduce using rule 19 (typing -> INT .)
    ID              reduce using rule 19 (typing -> INT .)


state 16

    (20) typing -> FLOAT .

    COLON           reduce using rule 20 (typing -> FLOAT .)
    ID              reduce using rule 20 (typing -> FLOAT .)


state 17

    (21) typing -> CHAR .

    COLON           reduce using rule 21 (typing -> CHAR .)
    ID              reduce using rule 21 (typing -> CHAR .)


state 18

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN . LEFTPAR RIGHTPAR LEFTBR statutes RIGHTBR

    LEFTPAR         shift and go to state 23


state 19

    (12) modules -> FUNCTION functype . neuralinsertfuncname funcparam
    (14) neuralinsertfuncname -> . ID

    ID              shift and go to state 25

    neuralinsertfuncname           shift and go to state 24

state 20

    (15) functype -> VOID .

    ID              reduce using rule 15 (functype -> VOID .)


state 21

    (16) functype -> typing .

    ID              reduce using rule 16 (functype -> typing .)


state 22

    (5) vars -> typing COLON . neuralinsertvar varsarr varsmul vars
    (7) neuralinsertvar -> . ID

    ID              shift and go to state 27

    neuralinsertvar                shift and go to state 26

state 23

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR . RIGHTPAR LEFTBR statutes RIGHTBR

    RIGHTPAR        shift and go to state 28


state 24

    (12) modules -> FUNCTION functype neuralinsertfuncname . funcparam
    (17) funcparam -> . LEFTPAR parameters RIGHTPAR SEMICOLON varsgl LEFTBR statutes RIGHTBR neuralendfuncs modules

    LEFTPAR         shift and go to state 30

    funcparam                      shift and go to state 29

state 25

    (14) neuralinsertfuncname -> ID .

    LEFTPAR         reduce using rule 14 (neuralinsertfuncname -> ID .)


state 26

    (5) vars -> typing COLON neuralinsertvar . varsarr varsmul vars
    (8) varsarr -> . LEFTSQR CTEINT RIGHTSQR
    (9) varsarr -> . empty
    (93) empty -> .

    LEFTSQR         shift and go to state 32
    COMMA           reduce using rule 93 (empty -> .)
    SEMICOLON       reduce using rule 93 (empty -> .)

    varsarr                        shift and go to state 31
    empty                          shift and go to state 33

state 27

    (7) neuralinsertvar -> ID .

    LEFTSQR         reduce using rule 7 (neuralinsertvar -> ID .)
    COMMA           reduce using rule 7 (neuralinsertvar -> ID .)
    SEMICOLON       reduce using rule 7 (neuralinsertvar -> ID .)


state 28

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR . LEFTBR statutes RIGHTBR

    LEFTBR          shift and go to state 34


state 29

    (12) modules -> FUNCTION functype neuralinsertfuncname funcparam .

    MAIN            reduce using rule 12 (modules -> FUNCTION functype neuralinsertfuncname funcparam .)


state 30

    (17) funcparam -> LEFTPAR . parameters RIGHTPAR SEMICOLON varsgl LEFTBR statutes RIGHTBR neuralendfuncs modules
    (22) parameters -> . typing COLON ID idarray mulparams
    (23) parameters -> . empty
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR
    (93) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    RIGHTPAR        reduce using rule 93 (empty -> .)

    parameters                     shift and go to state 35
    typing                         shift and go to state 36
    empty                          shift and go to state 37

state 31

    (5) vars -> typing COLON neuralinsertvar varsarr . varsmul vars
    (10) varsmul -> . COMMA neuralinsertvar varsarr varsmul
    (11) varsmul -> . SEMICOLON

    COMMA           shift and go to state 39
    SEMICOLON       shift and go to state 40

    varsmul                        shift and go to state 38

state 32

    (8) varsarr -> LEFTSQR . CTEINT RIGHTSQR

    CTEINT          shift and go to state 41


state 33

    (9) varsarr -> empty .

    COMMA           reduce using rule 9 (varsarr -> empty .)
    SEMICOLON       reduce using rule 9 (varsarr -> empty .)


state 34

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR . statutes RIGHTBR
    (26) statutes -> . assign statutesaux
    (27) statutes -> . reading statutesaux
    (28) statutes -> . writing statutesaux
    (29) statutes -> . returning statutesaux
    (30) statutes -> . ifing statutesaux
    (31) statutes -> . whiling statutesaux
    (32) statutes -> . foring statutesaux
    (33) statutes -> . exp statutesaux
    (34) statutes -> . specialfunc statutesaux
    (38) assign -> . ID idarray EQUAL exp SEMICOLON
    (46) reading -> . READ LEFTPAR ID idarray mulread RIGHTPAR SEMICOLON
    (39) writing -> . WRITE LEFTPAR auxwrite mulwrite RIGHTPAR SEMICOLON
    (49) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (50) ifing -> . IF LEFTPAR exp RIGHTPAR THEN LEFTBR statutes RIGHTBR elsing
    (53) whiling -> . WHILE LEFTPAR exp RIGHTPAR DO LEFTBR statutes RIGHTBR
    (54) foring -> . FOR ID idarray EQUAL exp TO exp DO LEFTBR statutes RIGHTBR
    (57) exp -> . andexp exp1
    (37) specialfunc -> . empty
    (60) andexp -> . boolexp andexp1
    (93) empty -> .
    (64) boolexp -> . arithexp boolexp1
    (73) arithexp -> . geoexp arithexp1
    (77) geoexp -> . finexp geoexp1
    (81) finexp -> . LEFTPAR exp RIGHTPAR
    (82) finexp -> . cteexp
    (83) cteexp -> . CTEINT
    (84) cteexp -> . CTEFLOAT
    (85) cteexp -> . CTECHAR
    (86) cteexp -> . ID paramsexp

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for LEFTPAR resolved as shift
  ! shift/reduce conflict for CTEINT resolved as shift
  ! shift/reduce conflict for CTEFLOAT resolved as shift
  ! shift/reduce conflict for CTECHAR resolved as shift
    ID              shift and go to state 53
    READ            shift and go to state 54
    WRITE           shift and go to state 55
    RETURN          shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59
    RIGHTBR         reduce using rule 93 (empty -> .)
    LEFTPAR         shift and go to state 42
    CTEINT          shift and go to state 67
    CTEFLOAT        shift and go to state 68
    CTECHAR         shift and go to state 69

  ! ID              [ reduce using rule 93 (empty -> .) ]
  ! READ            [ reduce using rule 93 (empty -> .) ]
  ! WRITE           [ reduce using rule 93 (empty -> .) ]
  ! RETURN          [ reduce using rule 93 (empty -> .) ]
  ! IF              [ reduce using rule 93 (empty -> .) ]
  ! WHILE           [ reduce using rule 93 (empty -> .) ]
  ! FOR             [ reduce using rule 93 (empty -> .) ]
  ! LEFTPAR         [ reduce using rule 93 (empty -> .) ]
  ! CTEINT          [ reduce using rule 93 (empty -> .) ]
  ! CTEFLOAT        [ reduce using rule 93 (empty -> .) ]
  ! CTECHAR         [ reduce using rule 93 (empty -> .) ]

    statutes                       shift and go to state 43
    assign                         shift and go to state 44
    reading                        shift and go to state 45
    writing                        shift and go to state 46
    returning                      shift and go to state 47
    ifing                          shift and go to state 48
    whiling                        shift and go to state 49
    foring                         shift and go to state 50
    exp                            shift and go to state 51
    specialfunc                    shift and go to state 52
    andexp                         shift and go to state 60
    empty                          shift and go to state 61
    boolexp                        shift and go to state 62
    arithexp                       shift and go to state 63
    geoexp                         shift and go to state 64
    finexp                         shift and go to state 65
    cteexp                         shift and go to state 66

state 35

    (17) funcparam -> LEFTPAR parameters . RIGHTPAR SEMICOLON varsgl LEFTBR statutes RIGHTBR neuralendfuncs modules

    RIGHTPAR        shift and go to state 70


state 36

    (22) parameters -> typing . COLON ID idarray mulparams

    COLON           shift and go to state 71


state 37

    (23) parameters -> empty .

    RIGHTPAR        reduce using rule 23 (parameters -> empty .)


state 38

    (5) vars -> typing COLON neuralinsertvar varsarr varsmul . vars
    (5) vars -> . typing COLON neuralinsertvar varsarr varsmul vars
    (6) vars -> . empty
    (19) typing -> . INT
    (20) typing -> . FLOAT
    (21) typing -> . CHAR
    (93) empty -> .

    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17
    FUNCTION        reduce using rule 93 (empty -> .)
    MAIN            reduce using rule 93 (empty -> .)
    LEFTBR          reduce using rule 93 (empty -> .)

    typing                         shift and go to state 13
    vars                           shift and go to state 72
    empty                          shift and go to state 14

state 39

    (10) varsmul -> COMMA . neuralinsertvar varsarr varsmul
    (7) neuralinsertvar -> . ID

    ID              shift and go to state 27

    neuralinsertvar                shift and go to state 73

state 40

    (11) varsmul -> SEMICOLON .

    INT             reduce using rule 11 (varsmul -> SEMICOLON .)
    FLOAT           reduce using rule 11 (varsmul -> SEMICOLON .)
    CHAR            reduce using rule 11 (varsmul -> SEMICOLON .)
    FUNCTION        reduce using rule 11 (varsmul -> SEMICOLON .)
    MAIN            reduce using rule 11 (varsmul -> SEMICOLON .)
    LEFTBR          reduce using rule 11 (varsmul -> SEMICOLON .)


state 41

    (8) varsarr -> LEFTSQR CTEINT . RIGHTSQR

    RIGHTSQR        shift and go to state 74


state 42

    (81) finexp -> LEFTPAR . exp RIGHTPAR
    (57) exp -> . andexp exp1
    (60) andexp -> . boolexp andexp1
    (64) boolexp -> . arithexp boolexp1
    (73) arithexp -> . geoexp arithexp1
    (77) geoexp -> . finexp geoexp1
    (81) finexp -> . LEFTPAR exp RIGHTPAR
    (82) finexp -> . cteexp
    (83) cteexp -> . CTEINT
    (84) cteexp -> . CTEFLOAT
    (85) cteexp -> . CTECHAR
    (86) cteexp -> . ID paramsexp

    LEFTPAR         shift and go to state 42
    CTEINT          shift and go to state 67
    CTEFLOAT        shift and go to state 68
    CTECHAR         shift and go to state 69
    ID              shift and go to state 76

    exp                            shift and go to state 75
    andexp                         shift and go to state 60
    boolexp                        shift and go to state 62
    arithexp                       shift and go to state 63
    geoexp                         shift and go to state 64
    finexp                         shift and go to state 65
    cteexp                         shift and go to state 66

state 43

    (1) program -> PROGRAM neuraltablefunctions SEMICOLON varsgl modules MAIN LEFTPAR RIGHTPAR LEFTBR statutes . RIGHTBR

    RIGHTBR         shift and go to state 77


state 44

    (26) statutes -> assign . statutesaux
    (35) statutesaux -> . statutes
    (36) statutesaux -> . empty
    (26) statutes -> . assign statutesaux
    (27) statutes -> . reading statutesaux
    (28) statutes -> . writing statutesaux
    (29) statutes -> . returning statutesaux
    (30) statutes -> . ifing statutesaux
    (31) statutes -> . whiling statutesaux
    (32) statutes -> . foring statutesaux
    (33) statutes -> . exp statutesaux
    (34) statutes -> . specialfunc statutesaux
    (93) empty -> .
    (38) assign -> . ID idarray EQUAL exp SEMICOLON
    (46) reading -> . READ LEFTPAR ID idarray mulread RIGHTPAR SEMICOLON
    (39) writing -> . WRITE LEFTPAR auxwrite mulwrite RIGHTPAR SEMICOLON
    (49) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (50) ifing -> . IF LEFTPAR exp RIGHTPAR THEN LEFTBR statutes RIGHTBR elsing
    (53) whiling -> . WHILE LEFTPAR exp RIGHTPAR DO LEFTBR statutes RIGHTBR
    (54) foring -> . FOR ID idarray EQUAL exp TO exp DO LEFTBR statutes RIGHTBR
    (57) exp -> . andexp exp1
    (37) specialfunc -> . empty
    (60) andexp -> . boolexp andexp1
    (64) boolexp -> . arithexp boolexp1
    (73) arithexp -> . geoexp arithexp1
    (77) geoexp -> . finexp geoexp1
    (81) finexp -> . LEFTPAR exp RIGHTPAR
    (82) finexp -> . cteexp
    (83) cteexp -> . CTEINT
    (84) cteexp -> . CTEFLOAT
    (85) cteexp -> . CTECHAR
    (86) cteexp -> . ID paramsexp

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for LEFTPAR resolved as shift
  ! shift/reduce conflict for CTEINT resolved as shift
  ! shift/reduce conflict for CTEFLOAT resolved as shift
  ! shift/reduce conflict for CTECHAR resolved as shift
    RIGHTBR         reduce using rule 93 (empty -> .)
    ID              shift and go to state 53
    READ            shift and go to state 54
    WRITE           shift and go to state 55
    RETURN          shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59
    LEFTPAR         shift and go to state 42
    CTEINT          shift and go to state 67
    CTEFLOAT        shift and go to state 68
    CTECHAR         shift and go to state 69

  ! ID              [ reduce using rule 93 (empty -> .) ]
  ! READ            [ reduce using rule 93 (empty -> .) ]
  ! WRITE           [ reduce using rule 93 (empty -> .) ]
  ! RETURN          [ reduce using rule 93 (empty -> .) ]
  ! IF              [ reduce using rule 93 (empty -> .) ]
  ! WHILE           [ reduce using rule 93 (empty -> .) ]
  ! FOR             [ reduce using rule 93 (empty -> .) ]
  ! LEFTPAR         [ reduce using rule 93 (empty -> .) ]
  ! CTEINT          [ reduce using rule 93 (empty -> .) ]
  ! CTEFLOAT        [ reduce using rule 93 (empty -> .) ]
  ! CTECHAR         [ reduce using rule 93 (empty -> .) ]

    assign                         shift and go to state 44
    statutesaux                    shift and go to state 78
    statutes                       shift and go to state 79
    empty                          shift and go to state 80
    reading                        shift and go to state 45
    writing                        shift and go to state 46
    returning                      shift and go to state 47
    ifing                          shift and go to state 48
    whiling                        shift and go to state 49
    foring                         shift and go to state 50
    exp                            shift and go to state 51
    specialfunc                    shift and go to state 52
    andexp                         shift and go to state 60
    boolexp                        shift and go to state 62
    arithexp                       shift and go to state 63
    geoexp                         shift and go to state 64
    finexp                         shift and go to state 65
    cteexp                         shift and go to state 66

state 45

    (27) statutes -> reading . statutesaux
    (35) statutesaux -> . statutes
    (36) statutesaux -> . empty
    (26) statutes -> . assign statutesaux
    (27) statutes -> . reading statutesaux
    (28) statutes -> . writing statutesaux
    (29) statutes -> . returning statutesaux
    (30) statutes -> . ifing statutesaux
    (31) statutes -> . whiling statutesaux
    (32) statutes -> . foring statutesaux
    (33) statutes -> . exp statutesaux
    (34) statutes -> . specialfunc statutesaux
    (93) empty -> .
    (38) assign -> . ID idarray EQUAL exp SEMICOLON
    (46) reading -> . READ LEFTPAR ID idarray mulread RIGHTPAR SEMICOLON
    (39) writing -> . WRITE LEFTPAR auxwrite mulwrite RIGHTPAR SEMICOLON
    (49) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (50) ifing -> . IF LEFTPAR exp RIGHTPAR THEN LEFTBR statutes RIGHTBR elsing
    (53) whiling -> . WHILE LEFTPAR exp RIGHTPAR DO LEFTBR statutes RIGHTBR
    (54) foring -> . FOR ID idarray EQUAL exp TO exp DO LEFTBR statutes RIGHTBR
    (57) exp -> . andexp exp1
    (37) specialfunc -> . empty
    (60) andexp -> . boolexp andexp1
    (64) boolexp -> . arithexp boolexp1
    (73) arithexp -> . geoexp arithexp1
    (77) geoexp -> . finexp geoexp1
    (81) finexp -> . LEFTPAR exp RIGHTPAR
    (82) finexp -> . cteexp
    (83) cteexp -> . CTEINT
    (84) cteexp -> . CTEFLOAT
    (85) cteexp -> . CTECHAR
    (86) cteexp -> . ID paramsexp

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for WRITE resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for LEFTPAR resolved as shift
  ! shift/reduce conflict for CTEINT resolved as shift
  ! shift/reduce conflict for CTEFLOAT resolved as shift
  ! shift/reduce conflict for CTECHAR resolved as shift
    RIGHTBR         reduce using rule 93 (empty -> .)
    ID              shift and go to state 53
    READ            shift and go to state 54
    WRITE           shift and go to state 55
    RETURN          shift and go to state 56
    IF              shift and go to state 57
    WHILE           shift and go to state 58
    FOR             shift and go to state 59
    LEFTPAR         shift and go to state 42
    CTEINT          shift and go to state 67
    CTEFLOAT        shift and go to state 68
    CTECHAR         shift and go to state 69

  ! ID              [ reduce using rule 93 (empty -> .) ]
  ! READ            [ reduce using rule 93 (empty -> .) ]
  ! WRITE           [ reduce using rule 93 (empty -> .) ]
  ! RETURN          [ reduce using rule 93 (empty -> .) ]
  ! IF              [ reduce using rule 93 (empty -> .) ]
  ! WHILE           [ reduce using rule 93 (empty -> .) ]
  ! FOR             [ reduce using rule 93 (empty -> .) ]
  ! LEFTPAR         [ reduce using rule 93 (empty -> .) ]
  ! CTEINT          [ reduce using rule 93 (empty -> .) ]
  ! CTEFLOAT        [ reduce using rule 93 (empty -> .) ]
  ! CTECHAR         [ reduce using rule 93 (empty -> .) ]

    reading                        shift and go to state 45
    statutesaux                    shift and go to state 81
    statutes                       shift and go to state 79
    empty                          shift and go to state 80
    assign                         shift and go to state 44
    writing                        shift and go to state 46
    returning                      shift and go to state 47
    ifing                          shift and go to state 48
    whiling                        shift and go to state 49
    foring                         shift and go to state 50
    exp                            shift and go to state 51
    specialfunc                    shift and go to state 52
    andexp                         shift and go to state 60
    boolexp                        shift and go to state 62
    arithexp                       shift and go to state 63
    geoexp                         shift and go to state 64
    finexp                         shift and go to state 65
    cteexp                         shift and go to state 66

state 46

    (28) statutes -> writing . statutesaux
    (35) statutesaux -> . statutes
    (36) statutesaux -> . empty
    (26) statutes -> . assign statutesaux
    (27) statutes -> . reading statutesaux
    (28) statutes -> . writing statutesaux
    (29) statutes -> . returning statutesaux
    (30) statutes -> . ifing statutesaux
    (31) statutes -> . whiling statutesaux
    (32) statutes -> . foring statutesaux
    (33) statutes -> . exp statutesaux
    (34) statutes -> . specialfunc statutesaux
    (93) empty -> .
    (38) assign -> . ID idarray EQUAL exp SEMICOLON
    (46) reading -> . READ LEFTPAR ID idarray mulread RIGHTPAR SEMICOLON
    (39) writing -> . WRITE LEFTPAR auxwrite mulwrite RIGHTPAR SEMICOLON
    (49) returning -> . RETURN LEFTPAR exp RIGHTPAR SEMICOLON
    (50) ifing -> . IF LEFTPAR exp RIGHTPAR THEN LEFTBR statutes RIGHTBR elsing
    (53) whiling -> . WHILE LEFTPAR exp RIGHTPAR DO LEFTBR statutes RIGHTBR
    (54) foring -> . FOR ID idarray EQUAL exp TO exp DO LEFTBR statutes RIGHTBR
    (57) exp -> . andexp exp1
    (37) specialfunc -> . empty
    (60) andexp -> . boolexp andexp1
    (64) boolexp -> . arithexp boolexp1
    (73) arithexp -> . geoexp arithexp1
    (77) geoexp -> . finexp geoexp1
    (81) finexp -> . LEFTPAR exp RIGHTPAR
    (82) finexp -> . cteexp
    (83) cteexp -> . CTEINT
    (84) cteexp -> . CTEFLOAT
    (85) cteexp -> . CTECHAR
    (86) cteexp -> . ID paramsexp
